--- a/covidapp/myapp/templates/covid_api_data.html
+++ b/covidapp/myapp/templates/covid_api_data.html
@@ -23,6 +23,9 @@
       <button type="button" class="btn btn-default">
         <a href="{% url 'export_data_to_csv' %}?{{request.GET.urlencode}}">Export currently displayed data!</a>
       </button>
+      <div>
+        <a href="https://github.com/NikolaGospodjinacki1/DjangoCovidApp/blob/main/covidapp/myapp/views.py">Repo link</a>
+      </div>
       <div class="container mt-5">
         <table class="table table-striped">
             <thead>
