--- a/covidapp/myapp/templates/covid_api_data.html
+++ b/covidapp/myapp/templates/covid_api_data.html
@@ -20,11 +20,11 @@
             <input type="submit">
         </form>
       </div>
-      <button type="button" class="btn btn-default">
-        <a href="{% url 'export_data_to_csv' %}?{{request.GET.urlencode}}">Export currently displayed data!</a>
+      <button type="button" class="btn btn-default" style="text-align:center">
+        <a href="{% url 'export_data_to_csv' %}?{{request.GET.urlencode}}" style="text-align:center">Export currently displayed data!</a>
       </button>
       <div>
-        <a href="https://github.com/NikolaGospodjinacki1/DjangoCovidApp/blob/main/covidapp/myapp/views.py">Repo link</a>
+        <a href="https://github.com/NikolaGospodjinacki1/DjangoCovidApp/blob/main/covidapp/myapp/views.py" style="text-align:center">Repo link</a>
       </div>
       <div class="container mt-5">
         <table class="table table-striped">
