--- a/covidapp/myapp/templates/covid_api_data.html
+++ b/covidapp/myapp/templates/covid_api_data.html
@@ -23,9 +23,9 @@
       <button type="button" class="btn btn-default" style="text-align:center">
         <a href="{% url 'export_data_to_csv' %}?{{request.GET.urlencode}}" style="text-align:center">Export currently displayed data!</a>
       </button>
-      <div>
+      <button type="button" class="btn btn-default" style="text-align:center"></button>
         <a href="https://github.com/NikolaGospodjinacki1/DjangoCovidApp/blob/main/covidapp/myapp/views.py" style="text-align:center">Repo link</a>
-      </div>
+      </button>
       <div class="container mt-5">
         <table class="table table-striped">
             <thead>
