--- a/covidapp/myapp/templates/covid_api_data.html
+++ b/covidapp/myapp/templates/covid_api_data.html
@@ -23,7 +23,7 @@
       <button type="button" class="btn btn-default" style="text-align:center">
         <a href="{% url 'export_data_to_csv' %}?{{request.GET.urlencode}}" style="text-align:center">Export currently displayed data!</a>
       </button>
-      <button type="button" class="btn btn-default" style="text-align:center"></button>
+      <button type="button" class="btn btn-default" style="text-align:center">
         <a href="https://github.com/NikolaGospodjinacki1/DjangoCovidApp/blob/main/covidapp/myapp/views.py" style="text-align:center">Repo link</a>
       </button>
       <div class="container mt-5">
