repo link now opens a new tab, new buttons

--- a/covidapp/myapp/templates/covid_api_data.html
+++ b/covidapp/myapp/templates/covid_api_data.html
@@ -24,7 +24,7 @@
         <a href="{% url 'export_data_to_csv' %}?{{request.GET.urlencode}}" style="text-align:center">Export currently displayed data!</a>
       </button>
       <button type="button" class="btn btn-default" style="text-align:center">
-        <a href="https://github.com/NikolaGospodjinacki1/DjangoCovidApp/blob/main/covidapp/myapp/views.py" style="text-align:center">Repo link</a>
+        <a href="https://github.com/NikolaGospodjinacki1/DjangoCovidApp/blob/main/covidapp/myapp/views.py" style="text-align:center" target="_blank">Repo link</a>
       </button>
       <div class="container mt-5">
         <table class="table table-striped">
